assets/css/main.css
html, body {
  height: 100%;
  padding: 0;
  margin: 0;
}

body {
  color: #fff;
  background-color: #222;
  font-family: Raleway;
  font-size: 1em;
}

p, h1, h2, h3, h4 {
  margin: 0;
}

p {
  padding: 0;
}

a {
  color: #fff;
  text-decoration: none;
}

small {
  font-size: 0.625em;
}

main {
  width: 100%;
}

main.center {
  height: calc(100% - 45px);
}

header {
  left: 0;
  right: 0;
  height: 45px;
}

nav {
  height: 100%;
  font-size: 1.125em;
  text-transform: uppercase;
}

footer {
  font-family: Rubik, sans-serif;
  font-size: 0.75em;
}

footer.fixed > .right {
  position: fixed;
  bottom: 8px;
  right: 12px;
}

footer.fixed > .left {
  position: fixed;
  bottom: 8px;
  left: 12px;
}

footer:not(.fixed) > .right {
  float: right;
  padding-bottom: 8px;
  padding-right: 12px;
}

footer:not(.fixed) > .left {
  float: left;
  padding-bottom: 8px;
  padding-left: 12px;
}

@media only screen and (max-width: 768px) {
  footer.fixed > .right, footer.fixed > .left {
    left: 50%;
    transform: translateX(-50%);
    right: unset;
    white-space: nowrap;
  }

  footer.fixed > .right {
    bottom: calc(0.75em + 12px);
  }

  footer:not(.fixed) > .right, footer:not(.fixed) > .left {
    display: flex;
    justify-content: center;
    width: 100%;
  }
}

footer a {
  font-weight: 600;
}

nav .desktop > a {
  transition: all .6s ease;
}

nav .desktop > a.selected {
  font-weight: 600;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  border-color: #fff;
}

nav .desktop > a:not(:last-child) {
  margin-right: 16px;
}

nav .mobile, nav .mobile > input {
  display: none;
}

nav .mobile label {
  cursor: pointer;
}

nav .mobile > .options {
  position: fixed;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  padding-top: 10px;
  background: #222;
  display: none;
  flex-direction: column;
  z-index: 1000;
}

nav .mobile > .options > * {
  flex: 1;
  user-select: none;
}

nav .mobile > input:checked ~ .options {
  display: flex;
}

@media only screen and (max-width: 768px) {
  nav .desktop {
    display: none;
  }

  nav .mobile {
    display: block;
  }
}

video.cover {
  position: fixed;
  min-width: 100%; 
  min-height: 100%;
  top: -10px;
  z-index: -1;
  overflow: hidden;
  -webkit-filter: blur(3px);
  -moz-filter: blur(3px);
  -o-filter: blur(3px);
  -ms-filter: blur(3px);
  filter: blur(3px);
	filter: alpha(opacity=25);
	-moz-opacity:0.25;
  -khtml-opacity: 0.25;
  opacity: 0.25;
}

.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

main.center {
  flex-direction: column;
}

.horizonal-center {
  margin: 0 auto;
}

.short-bio {
  margin-top: 4px;
  font-size: 1.2em;
}

.button {
  background: #222;
  color: rgba(255, 255, 255, 0.6);
  border-width: 1px;
  border-style: solid;
  border-image: linear-gradient(90deg,#5433ff,#20bdff,#a5fecb) 1;
  padding: 10px;
  font-size: 0.875em;
  cursor: pointer;
  transition: all .6s ease;
}

.button:hover {
  color: #fff;
  transform: scale(1.05) translateY(-0.1rem);
  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.25);
}

.button.down {
  margin-top: 10px;
}

.container {
  max-width: 636px;
}

@media only screen and (max-width: 768px) {
  .container {
    max-width: 90%;
  }
}

.container::after {
  content: "";
  clear: both;
  display: table;
}

.container.top-space {
  padding: 40px 0;
}

.container > .header {
  border-bottom-width: 3px;
  border-bottom-style: solid;
  border-top: 0;
  border-left: 0;
  border-right: 0;
  padding-bottom: 8px;
  font-size: 1em;
}

.container > .header > h3 {
  display: inline-block;
}

.container > .toggle {
  float: right;
  cursor: pointer;
}

.container > .content {
  padding: 8px 0;
  line-height: 1.4;
}

.container > .header {
  border-image: linear-gradient(90deg,#00bcff,#244493) 1;
}

.container > .content > span {
  color: #00bcff;
  white-space: nowrap;
}

.container#portfolio {
  max-width: 70%;
}

.container > article > h3:not(:first-child) {
  margin-top: 1em;
}

@media only screen and (max-width: 768px) {
  .container#portfolio {
    max-width: 90%;
  }
}

.portfolio-image {
  position: relative;
  box-sizing: border-box;
  font-family: Rubik, sans-serif;
  transition: 0.3s;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  padding: 5px;
  color: #fff;
  max-height: 210px;
  overflow: hidden;
}

.portfolio-image:hover {
  -webkit-filter: grayscale(0%);
  filter: grayscale(0%);
  transform: scale(1.03);
}

.portfolio-image > img {
  width: 100%;
  -webkit-filter: blur(0.5px);
  filter: blur(0.5px);
}

.portfolio-image > .title {
  position: absolute;
  bottom: 8px;
  left: 12px;
  text-transform: uppercase;
  font-weight: 600;
  transition: all 0.5s;
  text-shadow: 0 0 0.18em #000, -0.06em -0.06em #000, 0.06em 0.06em #000;
}

@media only screen and (max-width: 768px) {
  .portfolio-image > .title > small {
    display: none;
  }
}

.portfolio-image > .subtitle {
  position: absolute;
  bottom: 8px;
  left: 12px;
  overflow: hidden;
  white-space: nowrap;
  visibility: hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;
  text-shadow: 0 0 0.18em #000, -0.06em -0.06em #000, 0.06em 0.06em #000;
}

.portfolio-image:hover img {
  -webkit-filter: blur(0px);
  filter: blur(0px);
}

@media only screen and (min-width: 768px) {
  .portfolio-image:hover .subtitle {
    visibility: visible;
    opacity: 1;
  }
  
  .portfolio-image:hover .title {
    display: block;
    bottom: calc(1em + 8px);
  }
}

/* BEGIN SPACERS */
.spacer-1 {
  max-width: 8.33%;
  float: left;
}
.spacer-2 {
  max-width: 16.66%;
  float: left;
}
.spacer-4 {
  max-width: 33.33%;
  float: left;
}
.spacer-6 {
  max-width: 50%;
  float: left;
}
/* END SPACERS */

